Fixed fonts not working on IE

--- a/src/App.css
+++ b/src/App.css
@@ -342,7 +342,6 @@ h2 {
     overflow: hidden;
     height: 66%;
     z-index: 5;
-    display: none;
 }
 
 .left {
